resolve sidebar issue by hiding chat on smaller viewing ports

--- a/proj/src/main/webapp/chat.css
+++ b/proj/src/main/webapp/chat.css
@@ -237,3 +237,10 @@ img {
         width: 250px;
     }
 }
+
+/* small device view */
+/* under 750px*/
+@media only screen and (max-width: 750px) {
+
+} 
+    
